fix event field overflow

--- a/src/styles/editor-style.css
+++ b/src/styles/editor-style.css
@@ -666,7 +666,7 @@ label.room-picker-toggle > svg {
     display: flex; flex-direction: column;
     gap: 1rem;
 
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 #event-properties > .row {
@@ -1129,6 +1129,6 @@ label.room-picker-toggle > svg {
 }
 
 #draw-room-events-controls {
-    flex: 1;
+    height: 100%;
     display: flex; flex-direction: column;
 }
